fixed background of card-lg to show image on mobile

--- a/static/css/concat.css
+++ b/static/css/concat.css
@@ -13408,8 +13408,7 @@ body.channel.supporters p {
       margin-bottom: 0;
       background: #000;
       margin-left: -15px;
-      margin-right: -15px;
-      padding: 10px 22px; } }
+      margin-right: -15px; } }
   .card-lg a.card {
     height: 515px;
     position: relative;
@@ -13432,9 +13431,6 @@ body.channel.supporters p {
       top: 0;
       height: 100%;
       width: 100%; }
-      @media screen and (max-width: 620px) {
-        .card-lg a.card > article > figure {
-          display: none; } }
       .card-lg a.card > article > figure > img {
         max-width: 100%; }
     .card-lg a.card > article > .content {
@@ -13447,7 +13443,7 @@ body.channel.supporters p {
       height: 100%; }
       @media screen and (max-width: 620px) {
         .card-lg a.card > article > .content {
-          padding: 0; } }
+          padding: 10px 22px; } }
       .card-lg a.card > article > .content > .category {
         font-size: 1.4em;
         font-weight: bold;
